<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlatsFroidsLegumes">

    <TextView
        android:id="@+id/textView"
        android:layout_width="332dp"
        android:layout_height="93dp"
        android:layout_marginTop="44dp"
        android:text="@string/select_vegetables"
        android:textColor="@color/bg_txtTitle"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Chips pour les légumes -->
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupVegetables"
        android:layout_width="342dp"
        android:layout_height="228dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">
        <!-- Tomates -->
        <com.google.android.material.chip.Chip
            android:id="@+id/tomatoes"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomatoes"
            android:textSize="16sp"
            android:typeface="normal"
            app:chipBackgroundColor="@color/bg_color" />

        <!-- Maïs -->
        <com.google.android.material.chip.Chip
            android:id="@+id/corn"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/corn"
            android:textSize="16sp"
            android:typeface="normal"
            app:chipBackgroundColor="@color/bg_color" />

        <!-- Grenade -->
        <com.google.android.material.chip.Chip
            android:id="@+id/pomegranate"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pomegranate"
            android:textSize="16sp"
            android:typeface="normal"
            app:chipBackgroundColor="@color/bg_color" />

        <!-- Concombres -->
        <com.google.android.material.chip.Chip
            android:id="@+id/cucumbers"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cucumbers"
            android:textSize="16sp"
            android:typeface="normal"
            app:chipBackgroundColor="@color/bg_color" />

        <!-- Avocat -->
        <com.google.android.material.chip.Chip
            android:id="@+id/avocado"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/avocado"
            android:textSize="16sp"
            android:typeface="normal"
            app:chipBackgroundColor="@color/bg_color" />

        <!-- Mangue -->
        <com.google.android.material.chip.Chip
            android:id="@+id/mango"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mango"
            android:textSize="16sp"
            android:typeface="normal"
            app:chipBackgroundColor="@color/bg_color" />

        <!-- Champignons -->
        <com.google.android.material.chip.Chip
            android:id="@+id/mushrooms"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mushrooms"
            android:textSize="16sp"
            android:typeface="normal"
            app:chipBackgroundColor="@color/bg_color" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/btnBF"
        android:layout_width="244dp"
        android:layout_height="69dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:onClick="Rating"
        android:text="@string/buttonContinue"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupVegetables" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        style="@style/btnBC"
        android:layout_width="245dp"
        android:layout_height="71dp"
        android:layout_marginBottom="48dp"
        android:onClick="onClick"
        android:text="@string/btnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
