<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegimeDiet">

    <TextView
        android:id="@+id/printRegime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/printRegime"
        android:textColor="@color/bg_primary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textStyle="bold" />

    <Switch
        android:id="@+id/switchRegime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:minWidth="70dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionRegime"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/questionRegime"
        android:layout_width="405dp"
        android:layout_height="80dp"
        android:layout_marginTop="72dp"
        android:text="@string/questionRegime"
        android:textAlignment="center"
        android:textColor="@color/text_primary"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/anyRegime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printRegime"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/repVegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="60dp"
        android:text="@string/repVegetarian"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/switchRegime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionRegime" />

    <TextView
        android:id="@+id/repVegan"
        android:layout_width="73dp"
        android:layout_height="35dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="72dp"
        android:text="@string/repVegan"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/switchRegime"
        app:layout_constraintTop_toBottomOf="@+id/questionRegime"
        tools:ignore="TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonContinue"
        style="@style/btnBF"
        android:layout_width="154dp"
        android:layout_height="82dp"
        android:layout_marginBottom="12dp"
        android:onClick="ChoiceHot"
        android:text="@string/buttonContinue"
        app:layout_constraintBottom_toTopOf="@+id/buttonExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonExit"
        style="@style/btnBC"
        android:layout_width="154dp"
        android:layout_height="76dp"
        android:layout_marginBottom="60dp"
        android:onClick="onClick"
        android:text="@string/buttonExit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/anyRegime"
        android:layout_width="305dp"
        android:layout_height="70dp"
        android:layout_marginTop="304dp"
        android:text="@string/anyRegime"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printRegime"
        app:layout_constraintVertical_bias="0.642"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>