<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/scrollMain">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:padding="16dp">
        <TextView
            android:id="@+id/idProfil"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_person"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/bg_txtTitle"
            android:text="TextView" />
        </LinearLayout>

        <TextView
            android:id="@+id/AllChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AllChoice"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/bg_txtTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/lblRegimeChoice"
            android:text="@string/lblRegimeChoice"
            style="@style/labelCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/regimeChoiceDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView1"
            android:textColor="@color/colorDisplayChoice"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/lblTempChoice"
            android:text="@string/lblTempChoice"
            style="@style/labelCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tempChoiceDisplay"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/colorDisplayChoice"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/lblEquipChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblEquipChoice"
            style="@style/labelCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/equipChoiceDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/colorDisplayChoice"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/lblPlatsChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPlatsChoice"
            style="@style/labelCard"/>

        <TextView
            android:id="@+id/platsChoiceDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/colorDisplayChoice"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/lblLegumeChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblLegumeChoice"
            style="@style/labelCard"/>

        <TextView
            android:id="@+id/legumeChoiceDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/colorDisplayChoice"
            android:textSize="22sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNextR"
                style="@style/btnBF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="recipePage"
                android:text="@string/btnNextR" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBack7"
                style="@style/btnBC"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:onClick="onClick"
                android:text="@string/btnBack" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
