<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selectBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".base_PlatFroids">

    <TextView
        android:id="@+id/baseFroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/baseFroid"
        android:textColor="@color/bg_txtTitle"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/choiceBase"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:entries="@array/basePlats"
        app:layout_constraintBottom_toTopOf="@+id/buttonC"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseFroid"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonC"
        style="@style/btnBF"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginBottom="40dp"
        android:onClick="ChoiceProt"
        android:text="@string/buttonC"
        app:layout_constraintBottom_toTopOf="@+id/buttonE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonE"
        style="@style/btnBC"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginBottom="100dp"
        android:onClick="onClick"
        android:text="@string/buttonExit1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>